# BrownianNote

./: CMakeLists.txt  readme.md
source/: brownian_note.cpp  brownian_note.h  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
